--- a/web_crm_part4/views/show_contact.erb
+++ b/web_crm_part4/views/show_contact.erb
@@ -5,3 +5,11 @@
   <li>Email = <%= @contact.email %></li>
   <li>Note = <%= @contact.note %></li>
 </ul>
+
+
+<p><a href="/contacts/<%=@contact.id%>/edit">Edit</a></p>
+
+<form action='/contacts/<%= @contact.id %>' method='post'>
+  <input type='hidden' name='_method' value='delete'>
+  <input type='submit' name='delete' value='Delete Contact'>
+</form>
